changes - fixed z-index in filter

--- a/src/Components/css/filter.module.css
+++ b/src/Components/css/filter.module.css
@@ -22,20 +22,17 @@
 }
 
 .options {
-    pointer-events: none;
-    width: 246px;
-    padding: 0.5rem 1rem;
     position: absolute;
-    transition: background-color 0.2s linear;
-    background-color: var(--filter-popup-options-bg-color);
-
     top: 65px;
     left: 0px;
-
+    z-index: 1000;
+    width: 246px;
+    padding: 0.5rem 1rem;
     display: none;
-
     border-radius: 8px;
-
+    pointer-events: none;
+    transition: background-color 0.2s linear;
+    background-color: var(--filter-popup-options-bg-color);
     box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.532439);
 }
 
